# bevy_game_template

./: .gitmodules  Cargo.toml
.github/workflows/: ci.yml  deploy-page.yaml  release-android-google-play.yaml  release-ios-testflight.yaml  release.yaml
mobile/: .gitignore  Cargo.toml  Makefile  build_rust_deps.sh  manifest.yaml
mobile/.cargo/: config.toml
mobile/ios-src/: Info.plist  LaunchScreen.storyboard
mobile/ios-src/Assets.xcassets/AppIcon.appiconset/: Contents.json
mobile/mobile.xcodeproj/xcshareddata/xcschemes/: mobile.xcscheme
mobile/src/: lib.rs
src/: asset_loading.rs  game_input.rs  lib.rs  loading.rs  main.rs  menu.rs  player.rs
src/actions/: mod.rs
