[package]
name = "bevy_game_template" # ToDo
version = "0.1.0"
publish = false
authors = ["Rezan Kizilgun"]
edition = "2021"
exclude = ["dist", "build", "assets", "credits"]

[workspace]
members = ["mobile", "bevy_framework/derive_macros", "bevy_framework/framework"]

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# This is used by trunk as it doesn't support custom profiles: https://github.com/trunk-rs/trunk/issues/605
# xbuild also uses this profile for building android AABs because I couldn't find a configuration for it
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true

# Profile for distribution
[profile.dist]
inherits = "release"
opt-level = 3
lto = true
codegen-units = 1
strip = true

[features]
dev = [
    "bevy/dynamic_linking",
]

[dependencies]
bevy = { version = "0.14" }
bevy_asset_loader = { version = "0.21" }
rand = { version = "0.8.3" }
webbrowser = { version = "1", features = ["hardened"] }
framework = { path = "bevy_framework/framework", features = ["physics2d", "camera2d"] }

# keep the following in sync with Bevy's dependencies
winit = { version = "0.30", default-features = false }
image = { version = "0.25", default-features = false }
## This greatly improves WGPU's performance due to its heavy use of trace! calls
log = { version = "0.4", features = ["max_level_debug", "release_max_level_warn"] }
strum_macros = "0.26.4"
strum = "0.26.3"

[patch.crates-io]
bevy_tweening = { git = "https://github.com/Rezan7CC/bevy_tweening", branch = "main" }

[build-dependencies]
embed-resource = "1"
